--- a/style.css
+++ b/style.css
@@ -39,3 +39,12 @@ body {
     height: 100px;
     border: 3px solid #0f0;
 }
+
+.genericCanvas {
+    position: relative; 
+    top: 3%;
+    left: 0%;
+    width:60%;
+    height:57%;
+    border: 3px solid #0f0;
+}
